--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@emotion/styled": "^11.10.6",
     "@heroicons/react": "^2.0.16",
     "@mui/material": "^5.11.14",
+    "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.9",
+    "react-hot-toast": "^2.4.0",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
+    "@types/node": "^18.15.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
